fix: add contact link to mobile nav, remove extra margin in main nav and made allauth forms at smaller screen sizes full width

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -89,7 +89,7 @@ h1, h2, h3 ,h4, h5 {
 
 #main-nav ul a {
     font-size: 1.2em;
-    padding: 1em 1.5em;
+    padding: 1em 1.4em;
 }
 
 #main-nav img {
